<resources>
    <string name="app_name">Invoice App</string>
    <string name="skip">Skip</string>
    <string name="started">Get Started</string>
    <string name="next">Next</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="add_customer">Add Customer</string>
    <string name="comment">Write your coustomer a thank you message, a comment or an impostant information</string>
    <string name="inventory">Inventory</string>
    <string name="search_by_name_or_number">Search by Name or Number</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="customers">Customers</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="onboardingimage">onBoardingImage</string>
    <string name="edit_inventory">Edit Inventory</string>
    <string name="close">close</string>
    <string name="service_name">Service Name</string>
    <string name="service_charge">Service Charge</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax %</string>
    <string name="save">Save</string>
    <string name="kindly_fill_the_following_details_to_get_started">Kindly fill the following details to get started</string>
    <string name="business_name">Business Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_password">Create Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="i_accept_the_term_of_use_and_privacy_policy">I accept the Term of Use and Privacy Policy</string>
    <string name="already_account">Already have an account? Log In</string>
    <string name="continue_btn">Continue</string>
    <string name="product_name">Product Name</string>
    <string name="selling_price">Selling Price</string>
    <string name="quantity">Quantity</string>
    <string name="select_unit">Select Unit</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_the_six_digit_code_sent_to">Enter the six digit code sent to</string>
    <string name="hint_3">3</string>
    <string name="confirm">Confirm</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="new_customer">New Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="phone">Phone</string>
    <string name="select_from_contact">Select from Contact</string>
    <string name="address">Address</string>
    <string name="additional_information">Additional Information</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_into_your_account_with_the_detail_below">Log into your account with the detail below</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_t_have_an_account_sign_up">Dont\'t have an account? Sign Up</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="update">Update</string>
    <string name="back_button">Back Button</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_adddress">Customer Adddress</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="customer_additional_information">Customer Additional Information</string>
    <string name="authenticate_image">Authenticate Image</string>
    <string name="authentication">Authentication</string>
    <string name="manage_your_business_more_easily">Manage your business more easily</string>
    <string name="back_screen_button">back screen button</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="receipt">Receipt</string>
    <string name="setting_button">Setting Button</string>
    <string name="enter_receipt_number">Enter Receipt Number</string>
    <string name="save_business_detail">Save Business Detail</string>
    <string name="business_email_address">Business Email Address</string>

</resources>