<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/createAccountLayout"
    tools:context=".activity.CreateAccountActivity">

    <ImageView
        android:id="@+id/OauthLogo"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="250dp"
        android:src="@drawable/authenticate"
        android:contentDescription="@string/authenticate_image"
        android:layout_marginTop="70dp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:contentDescription="@string/authentication"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:src="@drawable/splashlogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/manage_your_business_more_easily"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_gravity="center"
        android:layout_marginHorizontal="23dp"
        android:textAllCaps="false"
        app:cornerRadius="50dp"
        android:paddingVertical="12dp"
        android:layout_marginTop="80dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="false"
        android:layout_marginHorizontal="23dp"
        android:paddingVertical="12dp"
        app:strokeColor="@color/seed"
        app:strokeWidth="1dp"
        app:cornerRadius="50dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />


</LinearLayout>