<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProductEditActivity">

    <TextView
        android:id="@+id/tvUpdateInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/edit_inventory"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/close"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUpdateInventory"
        app:layout_constraintTop_toTopOf="parent" />

   <LinearLayout
       android:id="@+id/productEditLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="18dp"
       app:layout_constraintTop_toBottomOf="@+id/tvUpdateInventory"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:orientation="vertical"
       >

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/product_name"
           android:id="@+id/textInput"
           android:layout_margin="10dp"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           >

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etProductEdit"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="text"
               android:minLines="1"/>

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/selling_price"
           android:layout_margin="10dp"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           >

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etSellingPriceEdit"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="text"
               android:minLines="1"/>

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:hint="@string/quantity"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           >

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etQuantityEdit"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="number"
               android:maxLines="1"/>

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:hint="@string/select_unit"
           android:id="@+id/textfeild"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
           >
           <AutoCompleteTextView
               android:id="@id/autoComplete"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="none"
               tools:ignore="LabelFor" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/discount"
           android:layout_margin="10dp"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           >

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etDiscountEdit"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="number"
               android:minLines="1"/>

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/tax"
           android:layout_margin="10dp"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           >

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etTaxEdit"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="text"
               android:minLines="1"/>

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/productUpdateBtn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/save"
           android:textAllCaps="false"
           android:layout_marginVertical="20dp"
           android:layout_marginHorizontal="10dp"
           android:paddingVertical="16dp"
           android:textSize="20sp"
           app:cornerRadius="10dp"
           />


   </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>