<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CustomerUpdateActivity">

    <TextView
        android:id="@+id/tvUpdateCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/edit_customer"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/close"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUpdateCustomer"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/etCustomerNameLayout"
        android:hint="@string/customer_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateCustomer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:minHeight="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/etCustomerEmailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCustomerNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:minHeight="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/etCustomerPhoneLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCustomerEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:minHeight="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvContact_Select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_from_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCustomerPhoneLayout"
        android:layout_marginTop="8dp"
        android:textAlignment="viewEnd"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/md_theme_light_error"
        android:textSize="14sp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/etCustomerAddressLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContact_Select">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:minHeight="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/additional_information"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/etCustomerInformationLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCustomerAddressLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerInformation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:minHeight="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Update_btn"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_semibold"
        android:paddingVertical="12dp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCustomerInformationLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>